知识结构体系提交

--- a/基础知识/数据类型.md
+++ b/基础知识/数据类型.md
@@ -68,4 +68,39 @@
 7|boolean(布尔值)|8|false|true,flase|boolean b = true
 8|char(字符)|16|空|0~2^16-1|char c = 'c'
 
-## 应用类型
+## 引用类型
+#### 类:类是一个模板，它描述一类对象的行为和状态
++ 变量   
+   1. 局部变量: 在方法，构造方法或者语句块中定义的变量被称之为局部变量。变量声明和初始化都是在方法中，方法结束后，变量就会自动销毁。
+   2. 成员变量: 成员变量是定义在类中，方法体之外的变量。这种变量在创建对象的时候实例化。成员变量可以被类中方法，构造方法和特定类的语句块访问。
+   3. 类变量: 类变量也声明在类中，方法体之外，但必须声明未static类型。 
++ 构造方法
+   1. 每个类都有构造方法，如果没有显式地为类定义构造方法，Java编译器将会未该类提供一个默认的构造方法。
+   2. 在创建一个对象的时候，至少要调用一个构造方法，构造方法的名称必须与类同名，一个类可以有多个构造方法。
++ 创建对象
+   1. 声明:声明一个对象，包括对象名称和对象类型。
+   2. 实例化:使用关键字new来创建一个对象。
+   3. 初始化:使用new创建对象时，会调研构造方法初始化对象。
++ 访问控制修饰符
+   1. default(即缺省，什么也不写):在同一包内可见，不使用任何修饰符。使用对象：类，接口，变量，方法。
+   2. private:在同一类内可见。使用对象：变量，方法。**注意：(不能修饰外部类)**
+   3. public:对所有类可见。使用对象：类，接口，变量，方法。
+   4. protected:对同一包内的类和所有子类可见。使用对象：变量，方法，**注意:不能修饰类(外部类)**   
+
+修饰符|当前类|同一包内|子孙类(同一包)|子孙类(不同包)|其他包
+--|:--:|:--:|:--:|:--:|:--:
+public|Y|Y|Y|Y|Y
+protected|Y|Y|Y|Y/N|N
+default|Y|Y|Y|N|N
+private|Y|N|N|N|N
++ 非访问修饰符
+   1. static修饰符
+      > 静态变量:static关键字用来声明独立于对象的静态变量，无论一个类实例化多少对象，它的静态变量只有一份拷贝。静态变量也被称之为类变量。局部变量不能声明为static变量   
+      > 静态方法: static关键字用来声明独立于对象的静态方法。静态方法不能使用类的非静态变量。静态方法从参数列表得到数据，然后计算这些数据。   
+    **对类变量和方法的访问可以直接使用 类名.变量名 和 类名.静态方法 的方式访问。**
+    2. final修饰符   
+       > final表示"最后的，最终的"含义，变量一旦赋值后，不能被重新赋值。被final修饰的实例变量必须显式指定初值。   
+        **final修饰符通常和static修饰符一起使用来创建类常量**
+
+#### 接口
+#### 数组
