知识结构体系提交

--- a/基础知识/数据类型.md
+++ b/基础知识/数据类型.md
@@ -99,8 +99,12 @@ private|Y|N|N|N|N
       > 静态方法: static关键字用来声明独立于对象的静态方法。静态方法不能使用类的非静态变量。静态方法从参数列表得到数据，然后计算这些数据。   
     **对类变量和方法的访问可以直接使用 类名.变量名 和 类名.静态方法 的方式访问。**
     2. final修饰符   
-       > final表示"最后的，最终的"含义，变量一旦赋值后，不能被重新赋值。被final修饰的实例变量必须显式指定初值。   
-        **final修饰符通常和static修饰符一起使用来创建类常量**
+       > **final变量:**表示"最后的，最终的"含义，变量一旦赋值后，不能被重新赋值。被final修饰的实例变量必须显式指定初值。   
+        **final修饰符通常和static修饰符一起使用来创建类常量**   
+        **final方法:** 类中的final方法可以被子类继承，但是不能被子类修改。  
+        **final类:** final类不能被继承，没有类能够继承final类的任何特性。
+    3. abstract 修饰符
+   
 
 #### 接口
 #### 数组
