--- a/基础知识/数据类型.md
+++ b/基础知识/数据类型.md
@@ -20,7 +20,7 @@
 2. 最小值是 -2,147,483,648(-2^31);
 3. 最大值是 2,147,483,647(2^31-1);
 4. 一般地整型变量默认为 int 类型;
-5. 默认值是 0 
+5. 默认值是 0
 6. 例子：int a = 100000, int b = -200000;
 
 + long(Long):
@@ -73,7 +73,7 @@
 + 变量   
    1. 局部变量: 在方法，构造方法或者语句块中定义的变量被称之为局部变量。变量声明和初始化都是在方法中，方法结束后，变量就会自动销毁。
    2. 成员变量: 成员变量是定义在类中，方法体之外的变量。这种变量在创建对象的时候实例化。成员变量可以被类中方法，构造方法和特定类的语句块访问。
-   3. 类变量: 类变量也声明在类中，方法体之外，但必须声明未static类型。 
+   3. 类变量: 类变量也声明在类中，方法体之外，但必须声明未static类型。
 + 构造方法
    1. 每个类都有构造方法，如果没有显式地为类定义构造方法，Java编译器将会未该类提供一个默认的构造方法。
    2. 在创建一个对象的时候，至少要调用一个构造方法，构造方法的名称必须与类同名，一个类可以有多个构造方法。
@@ -98,13 +98,24 @@ private|Y|N|N|N|N
       > 静态变量:static关键字用来声明独立于对象的静态变量，无论一个类实例化多少对象，它的静态变量只有一份拷贝。静态变量也被称之为类变量。局部变量不能声明为static变量   
       > 静态方法: static关键字用来声明独立于对象的静态方法。静态方法不能使用类的非静态变量。静态方法从参数列表得到数据，然后计算这些数据。   
     **对类变量和方法的访问可以直接使用 类名.变量名 和 类名.静态方法 的方式访问。**
-    2. final修饰符   
+   2. final修饰符   
        > **final变量:**表示"最后的，最终的"含义，变量一旦赋值后，不能被重新赋值。被final修饰的实例变量必须显式指定初值。   
         **final修饰符通常和static修饰符一起使用来创建类常量**   
         **final方法:** 类中的final方法可以被子类继承，但是不能被子类修改。  
         **final类:** final类不能被继承，没有类能够继承final类的任何特性。
-    3. abstract 修饰符
-   
+   3. abstract 修饰符   
+        > 抽象类: 抽象类不能用来实例化对象，声明抽象类的唯一目的是为了将来对该类进行扩充。   
+         一个抽象类不能同时被abstract和final修饰。如果一个类包含抽象方法，那么该类一定要声明为抽象类，否则将出现编译错误。   
+         抽象方法：抽象方法是一种没有任何实现的方法，该方法的具体实现有子类提供。抽象方法不能被声明成final和static。任何继承抽象类的子类必须实现父类的所有抽象方法，除非该子类也是抽象类。   
+         如果一个类包含若干个抽象方法，那么该类必须声明为抽象类。抽象类可以不包含抽象方法。抽象方法的声明以分号结尾。例如：**public abstract sample()**
+   4. synchronized 修饰符
+         >  synchronized关键字声明的方法同一时间只能被一个线程访问。synchroniezd修饰符可以应用与四个访问修饰符。
+   5. transient 修饰符
+        > 序列化的对象包含transient修饰的实例变量时，java虚拟机(JVM)跳过该特定的变量。该修饰符包含在定义变量的语句中，用来预处理类和变量的数据类型。
+   6. volatile 修饰符
+      > volatile 修饰的成员变量在每次被线程访问时，都强制从共享内存中重新读取该成员变量的值。而且，当成员变量发生变化时，会强制线程将变化值回写到共享内存。这样在任何时刻，两个不同的线程总是看到某个成员变量的同一个值。
+
+
 
 #### 接口
 #### 数组
