知识结构体系提交

--- a/基础知识/数据类型.md
+++ b/基础知识/数据类型.md
@@ -117,5 +117,30 @@ private|Y|N|N|N|N
 
 
 
-#### 接口
-#### 数组
+#### 接口和抽象类的相似性
+1. 相似性:
+   > 接口和抽象类都不能被实例化，它们都位于继承树的顶端，用于被其他类实现和继承。  
+   接口和抽象类都可以包含抽象方法，实现接口或继承抽象类的普通子类都必须实现这些抽象方法
+2. 区别
+   > 接口只有定义，不能有方法的实现，而抽象类可以有定义与实现，方法可在抽象类中实现。   
+   实现接口的关键字为implements,继承抽象类的关键字为extends。一个类可以实现多个接口，但一个类只能继承一个抽象类。所以接口可以间接地实现多继承。   
+   接口强调特定功能的实现。而抽象类强调所属关系。   
+   接口成员变量默认为public static final,必须赋初值，不能被修改；其所有的成员方法都是public，abstract的。抽象中成员变量默认default，可在子类中被重新定义，也可被重新赋值；抽象方法被abstract修饰，不能被private,static,synchorized和native修饰,必须以分号结尾，不带花括号。   
+   接口被用于常用的功能，便于日后维护和添加删除，而抽象类更倾向于充当公共类的角色，不适用于日后重新对里面的代码修改，功能需要累积时用抽象类，不需要积累时用接口。
+
+#### 初始化顺序
+1. 单个类初始化顺序:静态变量->静态代码块->成员变量->代码块->构造函数
+2. 继承中的初始化顺序:父类静态代码块初始化->父类静态方法->子类静态成员->子类的静态代码块->父类的普通成员变量/普通代码块->父类的构造方法->子类的普通成员变量/普通的代码块->子类的构造方法 [阿里关于初始化题目](https://blog.csdn.net/qq_20492999/article/details/80834207)
+#### 重载与重写的区别
+1. 方法重载是指同一个类中的多个方法具有相同的名字，但这些方法具有不同的参数列表，即参数的数量或参数类型不能完全相同
+2. 方法重写是存在子父类之间的，子类定义的方法与父类中的方法具有相同的方法名字，相同的参数列表和相同的返回类型
+3. 方法重载是让类以统一的方式处理不同类型数据的一种手段，重载Overloading是一个类中多态性的一种表现。
+4. 重载必须要满足方法名要一样，但是参数类型和个数不一样，返回值类型可以相同也可以不相同，无法以返回类型作为重载函数的区分标准。
+   > 重载规则:必须具有不同的参数列表   
+     可有有不同的返回类型
+     可以有不同的访问修饰符
+     可以抛出不同的异常
+```
+面试题：重载（Overload）和重写（Override）的区别。重载的方法能否根据返回类型进行区分？ 
+答：方法的重载和重写都是实现多态的方式，区别在于前者实现的是编译时的多态性，而后者实现的是运行时的多态性。重载发生在一个类中，同名的方法如果有不同的参数列表（参数类型不同、参数个数不同或者二者都不同）则视为重载；重写发生在子类与父类之间，重写要求子类被重写方法与父类被重写方法有相同的参数列表，有兼容的返回类型，比父类被重写方法更好访问，不能比父类被重写方法声明更多的异常（里氏代换原则）。重载对返回类型没有特殊的要求，不能根据返回类型进行区分。
+```
