--- a/基础知识/基础特性.md
+++ b/基础知识/基础特性.md
@@ -5,16 +5,15 @@
 #### 封装
    > 把对象的属性和行为（方法）结合为一个独立的整体，并尽可能隐藏对象的内部实现细节；   
    在java中，对于对象的内部属性一般用private来实现隐藏，并通过set和get方法对外提供访问接口.
-
-
-
-
-
-
-####　继承   
-　　> 子类继承父类的属性和行为，并能根据自己的需求扩展出新    的属性和行为，提高了代码的可复用性。   
-      Java的继承通过extends关键字来实现，实现继承的类被称为子类，被继承的类称为父类(有的也称其为基类、超类)，父类和子类的关系，是一种一般和特殊的关系；子类扩展父类，将可以获得父类的全部属性和方法。   
-      overide：
-
-当子父类中出现相同方法时，会先运行子类中的方法。
-重写的特点：方法名一样，访问修饰符权限不小于父类，返回类型一致，参数列表一致。
+#### 继承
+   > 子类继承父类的属性和行为，并能根据自己的需求扩展出    新的属性和行为，提高了代码的可复用性。   
+     Java的继承通过extends关键字来实现，实现继承的类被称为子类，被继承的类称为父类(有的也称其为基类、超类)，父类和子类的关系，是一种一般和特殊的关系；子类扩展父类，将可以获得父类的全部属性和方法。   
+    overide：   
+    当子父类中出现相同方法时，会先运行子类中的方法。重写的特点：方法名一样，访问修饰符权限不小于父类，返回类型一致，参数列表一致。
+#### 多态
+   > 不修改程序代码就可以改变程序运行时所绑定的具体代码，让程序可以选择多个运行状态；   
+   具体的实现方式就是：接口实现，继承父类进行方法重写，同一个类中进行方法重载。   
+   封装和继承都是为Java语言的多态提供了支撑；多态存在的三个必要条件：   
+     要有继承;   
+     要有重写;   
+     父类引用指向子类对象。
